feat: add swagger foc for create method
