# handler/respose.go
@@ -3,6 +3,7 @@ package handler
 import (
 	"fmt"
 
+	"github.com/Marcoslsl/goOpportunities.git/schemas"
 	"github.com/gin-gonic/gin"
 )
 
@@ -20,4 +21,14 @@ func sendSucess(ctx *gin.Context, op string, data interface{}) {
 		"message": fmt.Sprintf("Operation from handler: %s sucessfull", op),
 		"data":    data,
 	})
+}
+
+type ErrorResponse struct {
+	Message   string `json:"message"`
+	ErrorCode string `json:"errorCode"`
+}
+
+type CreateOpeningResponse struct {
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
 }
